# wscrap

./: .gitignore  README.md  pyproject.toml
wscrap/: __init__.py  utils.py
